# realtime-translation

./: .gitmodules  Cargo.toml  README.md  realtime_translator_spec.md
crates/audio-os/: Cargo.toml
crates/audio-os/pipewire-conf/: translator-virtmic.conf
crates/audio-os/src/: capture.rs  lib.rs  nodes.rs  playback.rs  streaming_playback.rs
crates/audio-os/tests/: list_nodes_live.rs
crates/pipeline/: Cargo.toml
crates/pipeline/src/: deepgram.rs  deepl.rs  elevenlabs.rs  events.rs  lib.rs  resample.rs  transcript.rs
crates/ui/: Cargo.toml
crates/ui/src/: app.rs  config.rs  lib.rs  session.rs  state.rs  track.rs  transcript.rs
docs/: DEEPGRAM_docs.md  DESIGN.md  MANUAL_TESTING.md  UI_PLAN.md
src/: main.rs
