[package]
name = "realtime-translation"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
serde_json = "1"
bytes = "1"
env_logger = "0.11"
futures = "0.3"
futures-util = "0.3"
libc = "0.2"
log = "0.4"
nix = { version = "0.30", features = ["socket", "uio"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }
