[package]
name = "audio-os"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pipewire    = { workspace = true }
libspa      = { workspace = true }
log         = { workspace = true }
thiserror   = { workspace = true }
bytemuck    = { workspace = true }

[dev-dependencies]
env_logger  = { workspace = true }
